# Bank-Statement-Parser

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.json.example  pyproject.toml  requirements.txt
data/: .gitkeep
examples/: basic_usage.py
notebooks/: Bank Statement Parser.ipynb
src/bank_statement_parser/: __init__.py  analyzer.py  anomaly_detector.py  categorizer.py  parser.py  utils.py
tests/: test_analyzer.py  test_parser.py
